--- a/sigi/app/Resources/views/oportunityresearch/search.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/search.html.twig
@@ -27,14 +27,33 @@
             <form class="form-horizontal" method="post">
 
                 {% for child in advancedForm.children %}
-                    <div class="form-group">
-                        {% if 'token' not in form_label(child) %}
-                            <label for="mentors" class="col-sm-2 control-label">{{ form_label(child) }}</label>
-                        {% endif %} 
-                        <div class="col-sm-10">
-                            {{ form_widget(child) }}
+                    {% if 'sort' not in form_label(child) %}
+                        <div class="form-group">
+                            {% if 'token' not in form_label(child) and 'order' not in form_label(child) %}
+                                <label for="mentors" class="col-sm-2 control-label">{{ form_label(child) }}</label>
+                            {% endif %} 
+                            <div class="col-sm-10">
+                                {{ form_widget(child) }}
+                            </div>
                         </div>
-                    </div>
+                     {% else %}   
+                        <div class="form-group">
+                            {% if 'token' not in form_label(child) %}
+                                <label for="mentors" class="col-sm-2 control-label">{{ form_label(child) }}</label>
+                            {% endif %} 
+                            <div class="col-sm-10">
+                                <div class="input-group"> 
+                                    {{ form_widget(child) }}
+                                    <div class="input-group-btn"> 
+                                        <button type="button" class="btn btn-default" onclick="setOrder()" aria-label="Help" >
+                                            <span class="glyphicon glyphicon-sort-by-alphabet" id="orderSpan"></span>
+                                        </button> 
+                                    </div> 
+                                </div>
+                            </div>
+                        </div>    
+
+                    {% endif %} 
                     
                 {% endfor %}    
 
@@ -47,66 +66,6 @@
       </div>
     </div>
 
-
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Fecha de creación</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Método de evaluación</th>
-                <th>Vacantes</th>
-                <th>Postulaciones</th>
-                <th>Keywords</th>
-                <th>Prerequisitos</th>
-                <th>Mentores</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for oportunityResearch in oportunityResearches %}
-            <tr>
-                <td>{% if oportunityResearch.creationDate %}{{ oportunityResearch.creationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ oportunityResearch.name }}</td>
-                <td>{{ oportunityResearch.description }}</td>
-                <td>{{ oportunityResearch.getModalityText() }}</td>
-                <td>{{ oportunityResearch.getOpenVacants() }}/{{ oportunityResearch.vacants }}</td>
-                <td><a href="{{ path('oportunityresearch_applications', { 'id': oportunityResearch.id }) }}">{{ oportunityResearch.applications|length }}</a></td>
-                <td>
-                    <ul>
-                        {% for keyword in oportunityResearch.oportunityKeywords() %}
-                            <li>
-                                {{ keyword.keyword }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        {% for prerequisite in oportunityResearch.prerequisites() %}
-                            <li>
-                                {{ prerequisite.courseNumber }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        {% for mentorName in oportunityResearch.getMentorsName() %}
-                            <li>
-                                {{ mentorName }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </td>
-                <td><a href="{{ path('oportunityresearch_show', { 'id': oportunityResearch.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a></td>
-                <td><a href="{{ path('oportunityresearch_edit', { 'id': oportunityResearch.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
      <table class="table table-striped">
         <tbody>
@@ -166,7 +125,28 @@ window.onload = function() {
     });
 
     setWidth();
+
+    if(document.getElementById("form_order").value == "DESC")
+        document.getElementById("orderSpan").className = "glyphicon glyphicon-sort-by-alphabet-alt";
 };
+
+function setOrder()
+{
+    var orderSpan = document.getElementById("orderSpan");
+    var form_order = document.getElementById("form_order");
+    form_order
+
+    if(orderSpan.className == "glyphicon glyphicon-sort-by-alphabet-alt")
+    {
+        orderSpan.className = "glyphicon glyphicon-sort-by-alphabet";
+        form_order.value = "ASC";
+    }
+    else
+    {
+        orderSpan.className = "glyphicon glyphicon-sort-by-alphabet-alt";
+        form_order.value = "DESC";
+    }
+}
 
 function setWidth()
 {
