--- a/sigi/app/Resources/views/deadline/index.html.twig
+++ b/sigi/app/Resources/views/deadline/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Deadlines</h1>
+    <h1>Fechas Limites</h1>
 
     <table class="table table-striped">
         <thead>
