--- a/sigi/app/Resources/views/deadline/show.html.twig
+++ b/sigi/app/Resources/views/deadline/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Deadlines</h1>
+    <h1>Fecha Limite</h1>
 
     <table class="table">
         <tbody>
