--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -48,11 +48,11 @@
                       </li>
                     {% endif %}
 
-                    {% if is_granted('ROLE_STUDENT') %}
+                    {% if is_granted('ROLE_STUDENT') and not is_granted('ROLE_ADMIN')%}
                       <li><a href="{{ path('student_pendings')}}">Pendientes</a></li>
                     {% endif %}
 
-                    {% if is_granted('ROLE_MENTOR') %}
+                    {% if is_granted('ROLE_MENTOR') and not is_granted('ROLE_ADMIN')%}
                       <li><a href="{{ path('mentor_pendings')}}">Pendientes</a></li>
                     {% endif %}
 
