--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -17,10 +17,40 @@
     <h1>Nueva Oportunidad</h1>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
+    <div class="row">
+		<div class="col-md-6 group-form">
+	    	{% for child in form.children %}
+	    		{% if 'token' not in form_label(child) %}
+					{% if 'left-column-form' in child.vars['attr']['class'] %}
+						{{ form_label(child) }}
+						{{ form_widget(child) }}
+					{% endif %} 
+				{% endif %}
+			{% endfor %}
+		</div>
+  		<div class="col-md-1">
+  		</div>
+  		<div class="col-md-3 group-form">
+  			{% for child in form.children %}
+  				{% if 'token' not in form_label(child) %}
+		  			{% if 'right-column-form' in child.vars['attr']['class'] %}
+						{{ form_label(child) }}
+						{{ form_widget(child) }}
+					{% endif %} 
+				{% else %}	
+					{{ form_widget(child) }}
+				{% endif %}
+			{% endfor %}
+  		</div>
+
+	</div>
 
         <input type="submit" class="btn btn-primary btn1" role="button" value="Crear" />
     {{ form_end(form) }}
+
+
+
+
 
  
     <a href="{{ path('oportunityresearch_index') }}" class="btn btn-info btn2" role="button">Lista de Oportunidades</a>
