se mejora la vista de mis oportunidades del mentor, agregando el buscador de oportunidades

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -76,7 +76,7 @@
                             <li><a href="{{path('oportunityresearch_new')}}">Crear Nueva</a></li>
                             <li><a href="{{path('oportunityresearch_index')}}">Mis Oportunidades</a></li>
                           {% endif %}
-                            <li><a href="{{path('listOportunities')}}">Ver Listado</a></li>
+                            <li><a href="{{path('oportunityresearch_search')}}">Ver Listado</a></li>
                         </ul>
                       </li>
                     {% endif %}
