arreglamos la entrada al hacer click en los login

--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -173,7 +173,7 @@
                         </ul>
                       </li>
                     {% else %}
-                      <li><a href="{{path('notification_index')}}">Iniciar Sesión</a></li>
+                      <li><a href="{{path('login_router')}}">Iniciar Sesión</a></li>
                     {% endif %}
                   </ul>
                 </div><!-- /.navbar-collapse -->
