--- a/sigi/src/BackendBundle/Resources/views/Default/index.html.twig
+++ b/sigi/src/BackendBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
     </br>
 
 	{% if not is_granted(['IS_AUTHENTICATED_FULLY', 'IS_AUTHENTICATED_REMEMBERED']) %}
-    <p>Para contemplar las Oportunidades de Investigación te recomendamos loguearte con tu usuario y contraseña haciendo click en: <a href="{{path('notification_index')}}">Iniciar Sesión</a> </p>
+    <p>Para contemplar las Oportunidades de Investigación te recomendamos loguearte con tu usuario y contraseña haciendo click en: <a href="{{path('login_router')}}">Iniciar Sesión</a> </p>
     <p>O bien, puedes revisar las Oportunidades de Investigación de carácter público <a href="{{path('publicOportunities')}}">aquí</a>
     {% endif %}
 
