--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -60,7 +60,7 @@
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Postulaciones <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          {% if is_granted('ROLE_STUDENT') %}
+                          {% if is_granted('ROLE_STUDENT')  and not is_granted('ROLE_ADMIN')%}
                             <li><a href="{{path('application_new')}}">Crear Nueva</a></li>
                           {% endif %}
                           <li><a href="{{path('application_index')}}">Ver Listado</a></li>
