--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -72,7 +72,7 @@
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Oportunidades <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          {% if is_granted('ROLE_MENTOR') %}
+                          {% if is_granted('ROLE_MENTOR') and not is_granted('ROLE_ADMIN') %}
                             <li><a href="{{path('oportunityresearch_new')}}">Crear Nueva</a></li>
                             <li><a href="{{path('oportunityresearch_index')}}">Mis Oportunidades</a></li>
                           {% endif %}
