--- a/sigi/app/Resources/views/oportunityresearch/index.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/index.html.twig
@@ -56,7 +56,7 @@
     </div>
 
     <table class="table table-striped">
-        <tbody>
+        <tbody id="paginable">
         {% for oportunityResearch in oportunityResearches %}
             <tr>
                 <td style="width: 90px;">
